версия для окон работает

--- a/windows/Makefile
+++ b/windows/Makefile
@@ -1,10 +1,9 @@
-all : subproc
+all : 
 	gcc windows_main.c -lm
-
-subproc:
-	gcc subproc.c -o subproc
 
 clean:
 	del input*.txt
 	del output*.txt
 	del .\a.exe .\subproc.exe
+
+rebuild: clean all
